# swisseph

./: .gitignore  CMakeLists.txt  Makefile  obama.c  sefstars.txt  swedll.h  swedllst.c
contrib/: Makefile  Makefile.debian  debootstrap.sh  mirror_ephedir.sh  swe.pc
contrib/debian/: README.Debian  README.source  changelog  control  libswe-dev.dirs  libswe-dev.install  libswe-doc.dirs  libswe-doc.install  libswe.cron.d.ex  libswe.doc-base.ex  libswe2.install  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  swetest.install  watch.ex
contrib/debian/upstream/: metadata.ex
ephe/: astlistn.md
swewin/: resource.h  swewin.c  swewin.h  swewin.rc  swewin64.c  swewin64.h
